--- a/Project-2 (hex color generate)/index.html
+++ b/Project-2 (hex color generate)/index.html
@@ -33,10 +33,12 @@
         }
         .btn:hover{
             box-shadow: 4px 4px 8px rgb(0, 0, 0);
+        }
+        .fw{
             font-weight: bolder;
         }
     </style>
-    <title>DOM</title>
+    <title>Project-2</title>
 </head>
 <body>
     <div id="div">
