--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
             min-height: 100vh;
         }
         ul{
-            margin-top: 50px;
-            position: relative;
             display: grid;
             grid-template-columns: auto auto auto auto auto;
         }
         li{
             margin: 20px ;
+            border: 2px solid white;
+            padding: 8px;
+            border-radius: 5px;
         }
         ul li a{
             font-size: 1.2rem;
             color: aqua;
             cursor: pointer;
             text-align: center;
-            margin: 10px;
             text-decoration: none;
         }
         a:hover{
@@ -54,8 +54,11 @@
     <h1>Document Object Model</h1>
     <div class="container">
         <ul>
-            <li><a target="_blank" href="./Project-1/index.html">Random RGB color </a></li>>
-
+            <li><a target="_blank" href="./Project-1 ( rgb color generate )/index.html">Random RGB color generate</a></li>>
+            <li><a target="_blank" href="./Project-2 (hex color generate)/index.html">Random HEX color generate</a></li>>
+            <li><a target="_blank" href="./Project-3( copy  random color code )/index.html">Copy random color code</a></li>>
+            <li><a target="_blank" href="./Project-4 ( Type hex code to change bg )/index.html">Type hex code to change bg</a></li>>
+            
         </ul>
     </div>
 </body>
