--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
         }
         li{
             margin: 20px ;
+            width: 220px;
+            text-align: center;
             border: 2px solid white;
             padding: 8px;
-            border-radius: 5px;
+            border-radius: 15px;
+            /* min-height: 10px; */
+        }
+        li:hover{
+            box-shadow: 4px 4px 8px rgb(248, 123, 20),-4px -4px 8px rgb(248, 123, 20);
         }
         ul li a{
             font-size: 1.2rem;
@@ -58,6 +64,7 @@
             <li><a target="_blank" href="./Project-2 (hex color generate)/index.html">Random HEX color generate</a></li>>
             <li><a target="_blank" href="./Project-3( copy  random color code )/index.html">Copy random color code</a></li>>
             <li><a target="_blank" href="./Project-4 ( Type hex code to change bg )/index.html">Type hex code to change bg</a></li>>
+            <li><a target="_blank" href="./Special Project/index.html">Country project</a></li>>
             
         </ul>
     </div>
