--- a/Project-6 Random color and slider control/index.html
+++ b/Project-6 Random color and slider control/index.html
@@ -42,7 +42,7 @@
                 <h5>RGB</h5>
             </div>
             <div class="color-code-display flex-space-between">
-                <input class="color-code-out" value="#7A31480" type="text" name="hex" id="hex-out">
+                <input class="color-code-out" value="#808080" type="text" name="hex" id="hex-out">
                 <input class="color-code-out" value="rgb(128,128,128)" type="text" name="rgb" id="rgb-out" disabled>
             </div>
         </section>
