--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             <li><a target="_blank" href="./Project-3( copy  random color code )/index.html">Copy random color code</a></li>>
             <li><a target="_blank" href="./Project-4 ( Type hex code to change bg )/index.html">Type hex code to change bg</a></li>>
             <li><a target="_blank" href="./Project-5 Dynamic Toast Message/index.html">Dynamic toast message</a></li>>
-            <li><a target="_blank" href="./Special Project/index.html">Country project</a></li>>
-            <li><a target="_blank" href="./Project-6/index.html">Master project</a></li>>
+            <li><a target="_blank" href="./Project-6 Random color and slider control/index.html">Random color and slider control</a></li>>
+            <li><a target="_blank" href="./Project-7 IndependentCountry/index.html">Country project</a></li>>
+            <li><a target="_blank" href="./Project-8 Number converter/index.html">Number Conversion</a></li>>
             
         </ul>
     </div>
