new file adding

--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        body{
+
+        body {
             background-color: rgb(4, 2, 57);
         }
-        h1{
+
+        h1 {
             position: relative;
             color: white;
             text-align: center;
             margin-top: 1%;
         }
-        .container{
+
+        .container {
             display: flex;
             justify-content: center;
             align-items: center;
             width: 100%;
             min-height: 100vh;
         }
-        ul{
+
+        ul {
             display: grid;
             grid-template-columns: auto auto auto auto auto;
         }
-        li{
-            margin: 20px ;
+
+        li {
+            margin: 20px;
             width: 220px;
             text-align: center;
             border: 2px solid white;
@@ -39,37 +45,48 @@
             border-radius: 15px;
             /* min-height: 10px; */
         }
-        li:hover{
-            box-shadow: 4px 4px 8px rgb(248, 123, 20),-4px -4px 8px rgb(248, 123, 20);
+
+        li:hover {
+            box-shadow: 4px 4px 8px rgb(248, 123, 20), -4px -4px 8px rgb(248, 123, 20);
         }
-        ul li a{
+
+        ul li a {
             font-size: 1.2rem;
             color: aqua;
             cursor: pointer;
             text-align: center;
             text-decoration: none;
         }
-        a:hover{
+
+        a:hover {
             color: aliceblue;
         }
-
     </style>
     <title>Project-List</title>
 </head>
+
 <body>
     <h1>Document Object Model</h1>
     <div class="container">
         <ul>
-            <li><a target="_blank" href="./Project-1 ( rgb color generate )/index.html">Random RGB color generate</a></li>>
-            <li><a target="_blank" href="./Project-2 (hex color generate)/index.html">Random HEX color generate</a></li>>
-            <li><a target="_blank" href="./Project-3( copy  random color code )/index.html">Copy random color code</a></li>>
-            <li><a target="_blank" href="./Project-4 ( Type hex code to change bg )/index.html">Type hex code to change bg</a></li>>
-            <li><a target="_blank" href="./Project-5 Dynamic Toast Message/index.html">Dynamic toast message</a></li>>
-            <li><a target="_blank" href="./Project-6 Random color and slider control/index.html">Random color and slider control</a></li>>
-            <li><a target="_blank" href="./Project-7 IndependentCountry/index.html">Country project</a></li>>
-            <li><a target="_blank" href="./Project-8 Number converter/index.html">Number Conversion</a></li>>
-            
+            <li><a target="_parent" href="./Project-1 ( rgb color generate )/index.html">Random RGB color generate</a>
+            </li>>
+            <li><a target="_parent" href="./Project-2 (hex color generate)/index.html">Random HEX color generate</a>
+            </li>>
+            <li><a target="_parent" href="./Project-3( copy  random color code )/index.html">Copy random color code</a>
+            </li>>
+            <li><a target="_parent" href="./Project-4 ( Type hex code to change bg )/index.html">Type hex code to change
+                    bg</a></li>>
+            <li><a target="_parent" href="./Project-5 Dynamic Toast Message/index.html">Dynamic toast message</a></li>>
+            <li><a target="_parent" href="./Project-6 Random color and slider control/index.html">Random color and
+                    slider control</a></li>>
+            <li><a target="_parent" href="./Project-7 IndependentCountry/index.html">Country project</a></li>>
+            <li><a target="_parent" href="./Project-8 Number converter/index.html">Number Conversion</a></li>>
+            <li><a target="_parent" href="./Project-9 Counter by input/index.html">Counter</a></li>>
+            <li><a target="_parent" href="./Project-10 Calculator/index.html">Calculator</a></li>>
+
         </ul>
     </div>
 </body>
+
 </html>
