--- a/Project-9 Counter by input/index.html
+++ b/Project-9 Counter by input/index.html
@@ -11,7 +11,7 @@
         box-sizing: border-box;
       }
       body {
-        background: #000;
+        background: #07012f;
       }
       .container {
         position: absolute;
@@ -20,7 +20,14 @@
         transform: translate(-50%, -50%);
         width: 600px;
         height: 40%;
-        background-color: greenyellow;
+        border: 1px solid white;
+        background-image: linear-gradient(
+            45deg,
+            rgba(255, 1, 1, 0.27),
+            rgba(65, 62, 255, 0.212)
+          ),
+          url(./bg.png);
+        background-size: cover;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
@@ -28,12 +35,18 @@
       }
       h1 {
         margin-top: 70px;
+        font-size: 3rem;
+        color: white;
       }
       .action {
         margin-top: 20px;
       }
       input {
-        padding: 5px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid rgb(0, 0, 0);
+        e-offset: 0;
+        outline: none;
       }
       input[type='number'] {
         width: 160px;
@@ -42,6 +55,10 @@
       input[type='button'] {
         height: 40px;
         font-weight: bold;
+        cursor: pointer;
+      }
+      input[type='button']:active {
+        box-shadow: 2px 2px 4px rgb(0, 0, 0);
       }
     </style>
   </head>
